--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,14 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #f4f4f4;
+    background: linear-gradient(to right, #091428, #0A1428);
   }
 
   .container {
     display: flex;
     gap: 10px;
     border-radius: 10px;
-    background-color: rgb(94, 93, 93);
+    background-color: #1E282D;
     padding: 20px;
     margin-left: 730px;
     margin-right: 730px;
@@ -36,6 +36,11 @@
   #dropdownBtn.fixed-width {
     width: 150px; /* Ajustez la largeur fixe selon vos besoins */
   }
+
+  #dropdownBtn {
+    background-color: #5B5A56;
+    border: none;
+  }
   
   #dropdownOptions {
     position: absolute;
@@ -51,6 +56,7 @@
     width: 100%;
     text-align: left;
     box-sizing: border-box;
+    text-align: center;
   }
   
   #dropdownOptions .btn.fixed-width {
@@ -63,6 +69,26 @@
   }
 
   .btn.selected {
-    background-color: #6289f5; /* Changer la couleur de fond en bleu */
+    background-color: #414141; /* Changer la couleur de fond en bleu */
     color: white; /* Changer la couleur du texte en blanc */
   }
+
+  .label {
+    font-weight: bold;
+    color: #ffffff;
+    flex-direction: column;
+  }
+
+  .labeltextbtn {
+    font-weight: bold;
+    text-align: center;
+    color: #ffffff;
+    margin-bottom: 5px;
+  }
+
+  .labeltext {
+    font-weight: bold;
+    text-align: center;
+    color: #ffffff;
+  }
+  
