--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@
     background: linear-gradient(to right, #091428, #0A1428);
   }
 
-  .navbar {
-    position: fixed; /* Barre de navigation fixée */
+  .navbarn {
+    position: absolute; /* Barre de navigation fixée */
     left: 0; /* Collée à gauche */
     top: 0; /* Collée en haut */
     width: 110px; /* Largeur de la barre de navigation */
@@ -23,18 +23,20 @@
   }
 
 /* Style de la liste non ordonnée (ul) dans la barre de navigation */
-.navbar ul {
+.navbarn ul {
     list-style: none; /* Supprime les puces de liste */
+    display: grid;
     padding: 0; /* Supprime le rembourrage */
+    margin-top: 250px;
   }
 
 /* Style des éléments de liste (li) dans la barre de navigation */
-.navbar li {
+.navbarn li {
     padding: 10px 0; /* Espacement vertical des éléments de la liste */
   }
 
 /* Style des liens (a) dans la barre de navigation */
-.navbar a {
+.navbarn a {
     display: block; /* Les liens occupent toute la largeur de la barre de navigation */
     text-decoration: none; /* Supprime la décoration de texte par défaut */
     color: #fff; /* Couleur du texte */
@@ -42,8 +44,12 @@
     transition: background-color 0.3s; /* Animation de transition pour le changement de couleur au survol */
   }
 
+  .navbar-logo {
+    height: 75px; /* Ajustez en fonction de la taille de votre logo */
+    display: block;
+  }
 /* Style des liens au survol */
-.navbar a:hover {
+.navbarn a:hover {
     background-color: #555; /* Couleur de fond au survol */
   }
 
