--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,16 @@
     color: red;
   }
 
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background: linear-gradient(to right, #091428, #0A1428);
-  }
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background: linear-gradient(to right, #091428, #0A1428);
+}
 
   .navbarn {
     position: absolute; /* Barre de navigation fixée */
@@ -53,7 +53,16 @@
     background-color: #555; /* Couleur de fond au survol */
   }
 
-  .container {
+.debugdiv {
+  margin-top: 200px;
+  position: absolute;
+}
+
+.debugtext {
+  color: white;
+}
+
+.container {
     display: flex;
     gap: 10px;
     border-radius: 10px;
